# gc9a01

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  justfile
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.github/: FUNDING.yml
.github/workflows/: rust-release.yml  rust.yml
blackpill-test/: Cargo.toml  README.md  memory.x
blackpill-test/.cargo/: config.toml
blackpill-test/examples/: blackpill_test.rs
esp32-test/: Cargo.toml  README.md
esp32-test/.cargo/: config.toml
esp32-test/examples/: esp32_test.rs
gc9a01/: Cargo.toml
gc9a01-rs/: Cargo.toml  README.md
gc9a01-rs/src/: brightness.rs  command.rs  display.rs  driver.rs  prelude.rs  rotation.rs  spi.rs
gc9a01-rs/src/mode/: basic.rs  graphics.rs  mod.rs
gc9a01/src/: command.rs  display.rs  driver.rs  lib.rs
gc9a01/src/mode/: basic.rs  graphics.rs  mod.rs
src/: brightness.rs  command.rs  display.rs  driver.rs  lib.rs  prelude.rs
src/mode/: basic.rs  graphics.rs  mod.rs
