[package]
name = "gc9a01-rs"
categories = ["embedded", "no-std"]
version = "0.2.1"
edition = "2021"
authors = [
    "Walter Bonetti <walter.bonetti@epitech.eu>"
]
license = "MIT OR Apache-2.0"
description = "SPI 4-wire driver for GC9A01 display controller"
keywords = ["no-std", "gc9a01", "embedded-graphics", "embedded", "embedded-hal-driver"]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
repository = "https://github.com/IniterWorker/gc9a01"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = [ "thumbv7m-none-eabi", "thumbv7em-none-eabihf" ]

[dependencies]
# Embedded HAL abstraction
# We use this layer to abstract hardware i2c/spi
embedded-hal = { version = "1.0.0" }
embedded-graphics-core = { version = "0.4.0", optional = true }

# This Rust crate contains a no_std compatible interface in form of traits
# to bridge between a bus driver and a display driver.
# The goal here is to allow display drivers to be written in
# a hardware interface agnostic way and prevent code duplication
# and missing implementations.
# https://github.com/therealprof/display-interface
display-interface = "0.5.0"
display-interface-spi = "0.5.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

[dev-dependencies.cargo-husky]
version = "1"
features = ["user-hooks"]

[lib]
name = "gc9a01"
path = "src/lib.rs"
