[package]
authors = [
    "Walter Bonetti <walter.bonetti@epitech.eu>"
]
edition = "2021"
readme = "README.md"
name = "blackpill-test"
version = "0.1.0"
publish = false

[dependencies]
defmt = "=0.3.2"
defmt-rtt = "=0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
stm32-hal2 = { version = "^1.6.3", features = ["f411", "f4rt", "embedded_hal"]}
embedded-hal = { version = "0.2.5" }
# graphics
embedded-graphics = "0.8.0"

# local libs
gc9a01-rs = { path = "../gc9a01-rs" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
