[package]
name = "esp32-test"
version = "0.1.0"
authors = ["Ettore Leandro Tognoli <ettoreleandrotognoli@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32"] }
embedded-graphics = "0.8.1"
embedded-hal = "0.2.7"
hal = { package = "esp32-hal", version = "0.16.0" }
gc9a01-rs = { path = "../gc9a01-rs" }