[package]
name = "bwit-gc9a01"
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"
authors = ["Walter Bonetti <walter.bonetti@epitech.eu>"]
license = "MIT OR Apache-2.0"
description = "SPI 4-wire driver for GC9A01 display controller"
keywords = ["no-std", "gc9a01", "watch", "display", "embedded", "embedded-hal-driver"]
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
repository = "https://github.com/IniterWorker/gc9a01"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Embedded HAL abstraction
# We use this layer to abstract hardware i2c/spi
embedded-hal = { version = "0.2.5" }
embedded-graphics-core = { version = "0.3.3", optional = true }

# This Rust crate contains a no_std compatible interface in form of traits
# to bridge between a bus driver and a display driver.
# The goal here is to allow display drivers to be written in
# a hardware interface agnostic way and prevent code duplication
# and missing implementations.
# https://github.com/therealprof/display-interface
display-interface = "0.4.1"
display-interface-spi = "0.4.1"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]


[lib]
name = "gc9a01"